--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,13 @@
         <script src="javascripts/angular/controllers/SimulatorController.js"></script>
         <script src="javascripts/angular/controllers/ConfigurationController.js"></script>
         <script src="javascripts/angular/controllers/LoginController.js"></script>
+        <script src="javascripts/angular/controllers/EditMapController.js"></script>
+        <script src="javascripts/angular/controllers/EditSceneController.js"></script>
+        <script src="javascripts/angular/controllers/NewMapController.js"></script>
+        <script src="javascripts/angular/controllers/RecommenderSettingsController.js"></script>
+        <script src="javascripts/angular/controllers/RegisterController.js"></script>
+        <script src="javascripts/angular/controllers/SettingsController.js"></script>
+        <script src="javascripts/angular/controllers/SimulationSettingsController.js"></script>
         
         <!-- Map stylesheet -->
         <link href="stylesheets/ol.css" rel="stylesheet" />
