--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
         <!-- Angular Services -->
         <script src="javascripts/angular/services/Services.js"></script>
         
+        <!-- Angular Factory -->
+        <script src="javascripts/angular/factory/DataFactory.js"></script>
+        
         <!-- Angular Controllers -->
         <script src="javascripts/angular/controllers/MapController.js"></script>
         <script src="javascripts/angular/controllers/SimulatorController.js"></script>
