--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
         <script src="javascripts/angular/angular.min.js"></script>
         <script src="javascripts/angular/ngStorage.min.js"></script>
         <script src="javascripts/angular/angular-base64-upload.js"></script>
+        <script src="javascripts/angular/checklist-model.js"></script>
         
         <!-- Configurations -->
         <script src="javascripts/angular/angular-route.min.js"></script>
