--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
         <script src="javascripts/angular/ngStorage.min.js"></script>
         <script src="javascripts/angular/angular-base64-upload.js"></script>
         <script src="javascripts/angular/checklist-model.js"></script>
+        <script src="javascripts/angular/xeditable.min.js"></script>
         
         <!-- Configurations -->
         <script src="javascripts/angular/angular-route.min.js"></script>
@@ -50,6 +51,7 @@
         <!-- Map stylesheet -->
         <link href="stylesheets/ol.css" rel="stylesheet" />
         <link href="stylesheets/style.css" rel="stylesheet" />
+        <link href="stylesheets/xeditable.min.css"/>
         
         <script src="javascripts/openlayers/ol.js"></script>
     </head>
