--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
         <script src="javascripts/angular/angular-base64-upload.js"></script>
         <script src="javascripts/angular/checklist-model.js"></script>
         <script src="javascripts/angular/xeditable.min.js"></script>
+        <script src="javascripts/angular/ng-csv.js"></script>
+        <script src="javascripts/angular/angular-sanitize.min.js"></script>
         
         <!-- Configurations -->
         <script src="javascripts/angular/angular-route.min.js"></script>
