--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,9 @@
         <script src="javascripts/angular/controllers/DymanicItemSettingsController.js"></script>
         <script src="javascripts/angular/controllers/EvaluationController.js"></script>
         
+        <script src="javascripts/latlon-spherical.js"></script>
+        <script src="javascripts/dms.js"></script>
+        
         <!-- Map stylesheet -->
         <link href="stylesheets/ol.css" rel="stylesheet" />
         <link href="stylesheets/style.css" rel="stylesheet" />
